/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-11-04
Add check for reading coordinate file
不等間隔格子で座標ファイルを読み込む際、座標ファイルが読み込めているか
どうか、また拡張子はcrdになっているかのチェックを付け加えた。

------------------
2014-10-30
Apply function overloading to method WriteInit and edit class cdm_NonUniformDomain
API関数WriteInitにオーバーロード機能の適用し、等間隔格子用と不等間隔格子用の
API関数WriteInitを用意した。また、等間隔格子・不等間隔格子の共通処理を
行う部分は、さらにオーバーロード機能を適用したWriteInitを作成した。
この変更に伴い、クラスcdm_NonUniformDomainのコンストラクタ部を編集した。
不等間隔格子の場合の座標データの精度は、クラスcdm_NonUniformDomainの
テンプレートの型で指定するようにした。

------------------
2014-10-26
Minor corrections about coordinatefile information
座標ファイルに関する情報の変数名やコメント文の訂正を行った。

------------------
2014-10-25
Change CoordinateFileFormat to CoordinateFileType
変数CoordinateFileFormatをCoordinateFileTypeに変更した。

------------------
2014-10-25
Merge branch advance_develop_NonUniform into branch advance_develop
ブランチadvance_develop_NonUniformをブランチadvance_developにマージした。
その際、cdm_DFI.h,cdm_DFI.Cは競合が発生したので解決した。
また、
E_CDM_OUTPUT_TYPE-> E_CDM_FILE_TYPE
CompName -> VariName
に変更できていない部分があったので変更した。

------------------
2014-10-24
- plot3d check
- #define D_CDM_EXT_FUNC "func" >> "fun" // 拡張子は"fun", FileFormat識別子は"plot3d"

------------------
2014-10-22
Add check of number of variables for SPH format
SPH形式のファイルを入出力する際、変数の個数が１か３以外の場合に
エラーとなるように設定した。

------------------
2014-10-22
Replace Component with NumVariables and edit codes following this replacement
dfiファイルのFileInfoの項目ComponentをNumVariablesに変更した。
また、この変更に伴い、コード内のComponentに関する単語について
Component->NumVariables、nComp->nVari等の置換を行った。
(ただし、BOVのヘッダー部のDATA_COMPONENTはそのままにした。)
また、コード内のコメントで「成分」を含んだ言葉を「変数」で置き換えた。

------------------
2014-10-22
Delete ArrayShape from dfi file and set ArrayShape by file format
dfiファイルのFileInfoの項目からArrayShapeを削除し、
ArrayShapeはファイル形式によって定めるようにした。

------------------
2014-10-21